feat(pandera): Add synthesize data and supported features sections

--- a/notebooks/2.2-pandera-explain.ipynb
+++ b/notebooks/2.2-pandera-explain.ipynb
@@ -33,50 +33,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eed0f232",
+   "id": "2dbf6357",
    "metadata": {},
    "source": [
-    "# 1. Imports"
+    "**Table of contents**:\n",
+    "1. [Explain Pandera](#1-explain-pandera)\n",
+    "   1. [Validate dataframe schema](#11-validate-dataframe-schema)\n",
+    "   2. [Column validation](#12-column-validation)\n",
+    "      1. [First validations](#121-first-validations)\n",
+    "      2. [Null values](#122-null-values)\n",
+    "      3. [Coercing types on columns](#123-coercing-types-on-columns)\n",
+    "      4. [Required columns](#124-required-columns)\n",
+    "      5. [Column regex pattern](#125-column-regex-pattern)\n",
+    "      6. [Validation the joint uniqueness of columns](#126-validating-the-joint-uniqueness-of-columns)\n",
+    "2. [Handling errors](#2-handling-errors)\n",
+    "   1. [Missing and required columns](#21-missing-and-required-columns)\n",
+    "      1. [Handling dataframe columns not in the schema](#211-handling-dataframe-columns-not-in-the-schema)\n",
+    "      2. [Adding missing columns](#212-adding-missing-columns)\n",
+    "   2. [Error reports](#22-error-reports)\n",
+    "3. [Synthesize data](#3-synthesize-data)\n",
+    "   1. [Basic usage](#31-basic-usage)\n",
+    "   2. [Usage in unit tests](#32-usage-in-unit-tests)\n",
+    "4. [Supported features by DataFrame backend](#4-supported-features-by-dataframe-backend)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "170fadc0",
-   "metadata": {},
-   "source": [
-    "## 1.1 Packages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bbc5a3b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3054ccc8",
-   "metadata": {},
-   "source": [
-    "## 1.2 Options"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc4d7727",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "740bdc09",
    "metadata": {},
    "source": [
-    "# 2. Explain Pandera"
+    "# 1. Explain Pandera"
    ]
   },
   {
@@ -84,7 +70,7 @@
    "id": "ec79ad48",
    "metadata": {},
    "source": [
-    "## 2.1 Validate dataframe schema"
+    "## 1.1 Validate dataframe schema"
    ]
   },
   {
@@ -175,7 +161,7 @@
    "id": "fe948680",
    "metadata": {},
    "source": [
-    "## 2.2 Column validation"
+    "## 1.2 Column validation"
    ]
   },
   {
@@ -198,7 +184,7 @@
    "id": "24884d0b",
    "metadata": {},
    "source": [
-    "### 2.2.1 First validations"
+    "### 1.2.1 First validations"
    ]
   },
   {
@@ -327,7 +313,7 @@
    "id": "63cd7f32",
    "metadata": {},
    "source": [
-    "### 2.2.2 Null values"
+    "### 1.2.2 Null values"
    ]
   },
   {
@@ -452,7 +438,7 @@
    "id": "78ea1c8c",
    "metadata": {},
    "source": [
-    "### 2.2.3 Coercing types on columns"
+    "### 1.2.3 Coercing types on columns"
    ]
   },
   {
@@ -550,7 +536,7 @@
    "id": "cda8800d",
    "metadata": {},
    "source": [
-    "### 2.2.4 Required columns"
+    "### 1.2.4 Required columns"
    ]
   },
   {
@@ -668,7 +654,7 @@
    "id": "1cdf5fdb",
    "metadata": {},
    "source": [
-    "### 2.2.5 Column regex pattern"
+    "### 1.2.5 Column regex pattern"
    ]
   },
   {
@@ -934,7 +920,7 @@
    "id": "349004f5",
    "metadata": {},
    "source": [
-    "### 2.2.6 Validating the joint uniqueness of columns"
+    "### 1.2.6 Validating the joint uniqueness of columns"
    ]
   },
   {
@@ -1029,10 +1015,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "33461a12",
+   "metadata": {},
+   "source": [
+    "# 2. Handling errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1d69fe6a",
    "metadata": {},
    "source": [
-    "## 2.3 Missing and required columns"
+    "## 2.1 Missing and required columns"
    ]
   },
   {
@@ -1040,7 +1034,7 @@
    "id": "47b95fa6",
    "metadata": {},
    "source": [
-    "### 2.3.1 Handling dataframe columns not in the schema"
+    "### 2.1.1 Handling dataframe columns not in the schema"
    ]
   },
   {
@@ -1160,7 +1154,7 @@
    "id": "18a476bf",
    "metadata": {},
    "source": [
-    "### 2.3.2 Adding missing columns"
+    "### 2.1.2 Adding missing columns"
    ]
   },
   {
@@ -1262,7 +1256,7 @@
    "id": "ada51750",
    "metadata": {},
    "source": [
-    "## 2.4 Error reports"
+    "## 2.2 Error reports"
    ]
   },
   {
@@ -1350,9 +1344,216 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c10644ab",
+   "metadata": {},
+   "source": [
+    "# 3. Synthesize data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "379b27cd",
+   "metadata": {},
+   "source": [
+    "`pandera` provides a utility for generating synthetic data purely from pandera schema or schema component objects. Under the hood, the schema metadata is collected to create a data-generating strategy using [hypothesis](https://hypothesis.readthedocs.io/en/latest/), which is a property-based testing library."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b36eb13c",
+   "metadata": {},
+   "source": [
+    "## 3.1 Basic usage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a3c9bc8",
+   "metadata": {},
+   "source": [
+    "Once you’ve defined a schema, it’s easy to generate examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "598ab096",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column1</th>\n",
+       "      <th>column2</th>\n",
+       "      <th>column3</th>\n",
+       "      <th>column4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>foo</td>\n",
+       "      <td>k.qfkx@axa-direct.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>foo</td>\n",
+       "      <td>yprw.wsgw@axa-direct.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>foo</td>\n",
+       "      <td>rlcfk.iavdc@axa-direct.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   column1  column2 column3                     column4\n",
+       "0       10     0.25     foo       k.qfkx@axa-direct.com\n",
+       "1       10     0.25     foo    yprw.wsgw@axa-direct.com\n",
+       "2       10     0.25     foo  rlcfk.iavdc@axa-direct.com"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandera.pandas as pa\n",
+    "\n",
+    "schema = pa.DataFrameSchema(\n",
+    "    {\n",
+    "        \"column1\": pa.Column(int, pa.Check.eq(10)),\n",
+    "        \"column2\": pa.Column(float, pa.Check.eq(0.25)),\n",
+    "        \"column3\": pa.Column(str, pa.Check.eq(\"foo\")),\n",
+    "        \"column4\": pa.Column(str, pa.Check.str_matches(r\"[a-z]+\\.[a-z]+@axa\\-direct\\.com\"))\n",
+    "    }\n",
+    ")\n",
+    "schema.example(size=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc69c051",
+   "metadata": {},
+   "source": [
+    "## 3.2 Usage in unit tests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b68f019",
+   "metadata": {},
+   "source": [
+    "The `example` method is available for all schemas and schema components, and is primarily meant to be used interactively. It could be used in a script to generate test cases, but `hypothesis` recommends against doing this and instead using the `strategy` method to create a `hypothesis` strategy that can be used in `pytest` unit tests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4c690068",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hypothesis\n",
+    "import pandera.pandas as pa\n",
+    "\n",
+    "schema = pa.DataFrameSchema(\n",
+    "    {\n",
+    "        \"column1\": pa.Column(int, pa.Check.eq(10)),\n",
+    "        \"column2\": pa.Column(float, pa.Check.eq(0.25)),\n",
+    "        \"column3\": pa.Column(str, pa.Check.eq(\"foo\")),\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def processing_fn(df):\n",
+    "    return df.assign(column4=df.column1 * df.column2)\n",
+    "\n",
+    "@hypothesis.given(schema.strategy(size=5))\n",
+    "def test_processing_fn(dataframe):\n",
+    "    result = processing_fn(dataframe)\n",
+    "    assert \"column4\" in result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2307dcc",
+   "metadata": {},
+   "source": [
+    "The above example is trivial, but you get the idea! Schema objects can create a `strategy` that can then be collected by a [pytest](https://docs.pytest.org/en/latest/) runner. We could also run the tests explicitly ourselves, or run it as a `unittest.TestCase`. For more information on testing with hypothesis, see the [hypothesis quick start guide](https://hypothesis.readthedocs.io/en/latest/quickstart.html#running-tests).\n",
+    "\n",
+    "A more practical example involves using [schema transformations](https://pandera.readthedocs.io/en/stable/dataframe_schemas.html#dataframe-schema-transformations). We can modify the function above to make sure that `processing_fn` actually outputs the correct result:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d1f74ece",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_schema = schema.add_columns({\"column4\": pa.Column(float)})\n",
+    "\n",
+    "@pa.check_output(out_schema)\n",
+    "def processing_fn(df):\n",
+    "    return df.assign(column4=df.column1 * df.column2)\n",
+    "\n",
+    "@hypothesis.given(schema.strategy(size=5))\n",
+    "def test_processing_fn(dataframe):\n",
+    "    processing_fn(dataframe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e9ee312",
+   "metadata": {},
+   "source": [
+    "# 4. Supported features by DataFrame backend"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17a81933",
+   "metadata": {},
+   "source": [
+    "Currently, pandera provides four validation backends: `pandas`, `pyspark`, `polars`, and `ibis`. The table below shows which of pandera’s features are available for the [supported dataframe libraries](https://pandera.readthedocs.io/en/stable/supported_libraries.html#dataframe-libraries):\n",
+    "\n",
+    "![Supported features](../docs/pandera-libraries-compatibility.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c10644ab",
+   "id": "d1920367",
    "metadata": {},
    "outputs": [],
    "source": []
