fix: not displayed eq

--- a/notebooks/3.1-bayesian-opt-explain.md
+++ b/notebooks/3.1-bayesian-opt-explain.md
@@ -38,7 +38,7 @@ $$
 \mathbf{x}_{t+1} = \arg\max_{\mathbf{x} \in \mathcal{X}} \alpha(\mathbf{x})
 $$
 
-where $\mathcal{X}$ is the hyperparameter search space.
+<!-- where $\mathcal{X}$ is the hyperparameter search space. -->
 
 4. Evaluate the function $f$ at $\mathbf{x}_{t+1}$ and add the observation $(\mathbf{x}_{t+1}, f(\mathbf{x}_{t+1}))$ to the history.
 5. Repeat from step 2 until the stopping criterion (number of iterations or convergence) is reached.
