--- a/notebooks/3.1-bayesian-opt-explain.md
+++ b/notebooks/3.1-bayesian-opt-explain.md
@@ -30,6 +30,20 @@ Bayesian optimization relies on two main choices [Snoek et al., 2012](https://do
 
 In general, one iteration of Bayesian optimization proceeds as follows [distill](https://doi.org/10.1007/s10994-012-5263-4):
 
+<ol>
+<li>Select a surrogate model to approximate $f(\mathbf{x})$.</li>
+<li>Using all previous evaluations $(\mathbf{x}, f(\mathbf{x}))$, apply Bayes' rule.</li>
+<li>Use the acquisition function $\alpha(\mathbf{x})$ to select the next point $\mathbf{x}_{t+1}$ by solving:
+
+$$
+\mathbf{x}_{t+1} = \arg\max_{\mathbf{x} \in \mathcal{X}} \alpha(\mathbf{x})
+$$
+
+where $\mathcal{X}$ is the hyperparameter search space.
+</li>
+<li>Evaluate $f$ at $\mathbf{x}_{t+1}$ and add it to the history.</li>
+</ol>
+
 1. Select a surrogate model to approximate $f(\mathbf{x})$ and define a prior (e.g., a Gaussian process).
 2. Using all previous evaluations, i.e., pairs $(\mathbf{x}, f(\mathbf{x}))$, apply Bayes' rule to obtain the posterior distribution.
 3. Use the acquisition function $\alpha(\mathbf{x})$ to select the next point $\mathbf{x}_{t+1}$ to evaluate by solving:  
