--- a/notebooks/3.1-bayesian-opt-explain.md
+++ b/notebooks/3.1-bayesian-opt-explain.md
@@ -32,8 +32,15 @@ In general, one iteration of Bayesian optimization proceeds as follows [distill]
 
 1. Select a surrogate model to approximate $f(\mathbf{x})$ and define a prior (e.g., a Gaussian process).
 2. Using all previous evaluations, i.e., pairs $(\mathbf{x}, f(\mathbf{x}))$, apply Bayes' rule to obtain the posterior distribution.
-3. Use the acquisition function $\alpha(\mathbf{x})$ to select the next point $$\mathbf{x}_{t+1}$$ to evaluate by solving: $\mathbf{x}_{t+1} = \arg\max_{\mathbf{x} \in \mathcal{X}} \alpha(\mathbf{x})$, where $\mathcal{X}$ is the hyperparameter search space.
-4. Evaluate the function $f$ at $\mathbf{x}_{t+1}$ and add the observation $(\mathbf{x}_{t+1}, f(\mathbf{x}_{t+1}))$ to the history.
+3. Use the acquisition function $\alpha(\mathbf{x})$ to select the next point $x_{t+1}$ to evaluate by solving:  
+
+$$
+x_{t+1} = \arg\max_{\mathbf{x} \in \mathcal{X}} \alpha(\mathbf{x})
+$$
+
+where $\mathcal{X}$ is the hyperparameter search space.
+
+4. Evaluate the function $f$ at $x_{t+1}$ and add the observation $(x_{t+1}, f(x_{t+1}))$ to the history.
 5. Repeat from step 2 until the stopping criterion (number of iterations or convergence) is reached.
 
 ### Common Acquisition Functions
