fix: add correct references

--- a/notebooks/3.1-bayesian-opt-explain.md
+++ b/notebooks/3.1-bayesian-opt-explain.md
@@ -1,6 +1,6 @@
 # Quick intro to Bayesian Optimization concepts
 
-A **hyperparameter** is a parameter that characterizes a machine learning model. For example, in CatBoost, it could be the number of iterations, while in logistic regression, it could be the regularization factor. Although modern libraries often provide satisfactory default values, exploring other configurations is essential to optimize model performance. Hyperparameter tuning is therefore a central and recurring challenge in machine learning. However, this process is often perceived as "opaque" because it lacks systematic methods and heavily depends on experience and empirical rules [Snoek et al., 2012](https://doi.org/10.1007/s10994-012-5263-4).
+A **hyperparameter** is a parameter that characterizes a machine learning model. For example, in CatBoost, it could be the number of iterations, while in logistic regression, it could be the regularization factor. Although modern libraries often provide satisfactory default values, exploring other configurations is essential to optimize model performance. Hyperparameter tuning is therefore a central and recurring challenge in machine learning. However, this process is often perceived as "opaque" because it lacks systematic methods and heavily depends on experience and empirical rules [\(Snoek et al., 2012\)](https://arxiv.org/abs/1206.2944).
 
 Two common methods are used to select hyperparameters:
 
@@ -11,7 +11,7 @@ Two common methods are used to select hyperparameters:
 
 Both of these hyperparameter optimization methods are popular and widely used. However, they share a common limitation: the information from previously evaluated combinations does not influence the choice of future trials. Intuitively, if certain regions of the hyperparameter space prove promising, it would make sense to explore them further. Conversely, repeatedly evaluating regions with low past performance is inefficient.
 
-**Bayesian optimization** addresses this limitation. This approach iteratively searches for an optimized combination of hyperparameters using an **acquisition function**, which balances the trade-off between exploitation and exploration. Exploitation favors new combinations near those that have yielded good results, while exploration tests regions of the hyperparameter space that are less or not yet evaluated.
+**Bayesian optimization** addresses this limitation. This approach iteratively searches for an optimized combination of hyperparameters using an **acquisition function**, which balances the trade-off between exploitation and exploration. Exploitation favors new combinations near those that have yielded good results, while exploration tests regions of the hyperparameter space that are less or not yet evaluated [\(Watanabe, 2023\)](https://arxiv.org/abs/2304.11127).
 
 The figure below illustrates the impact of different hyperparameter search strategies on finding optimal performance. It shows a hypothetical RMSE as a function of two hyperparameters, with 30 sampled points displayed for each method. Dark blue areas represent low RMSE (low error), while yellow areas indicate high RMSE (high error).
 
@@ -24,11 +24,13 @@ The figure below illustrates the impact of different hyperparameter search strat
 
 ## How Bayesian Optimization Works
 
-To achieve its goal, Bayesian optimization builds a probabilistic model of $f(\mathbf{x})$, the function to optimize. This function takes its inputs from the set $\mathcal{X} \subset \mathbb{R}^D$. At each iteration, the probabilistic model of $f(\mathbf{x})$ guides the search in $\mathcal{X}$, taking into account both the performance of previous iterations and regions of the search space with more or less uncertainty [Snoek et al., 2012](https://doi.org/10.1007/s10994-012-5263-4).
+To achieve its goal, Bayesian optimization builds a probabilistic model of $f(\mathbf{x})$, the function to optimize. This function takes its inputs from the set $\mathcal{X} \subset \mathbb{R}^D$. At each iteration, the probabilistic model of $f(\mathbf{x})$ guides the search in $\mathcal{X}$, taking into account both the performance of previous iterations and regions of the search space with more or less uncertainty [\(Snoek et al., 2012\)](https://arxiv.org/abs/1206.2944).
 
-Bayesian optimization relies on two main choices [Snoek et al., 2012](https://doi.org/10.1007/s10994-012-5263-4): selecting a **surrogate model** to approximate the function to optimize and choosing an **acquisition function** $\alpha(\mathbf{x})$ to determine the next point to evaluate. **Gaussian processes** are frequently used as surrogate models due to their flexibility and ease of use, with a specified prior over $f(\mathbf{x})$.
+Bayesian optimization relies on two main choices [\(Snoek et al., 2012\)](https://arxiv.org/abs/1206.2944): selecting a **surrogate model** to approximate the function to optimize and choosing an **acquisition function** $\alpha(\mathbf{x})$ to determine the next point to evaluate. **Gaussian processes** are frequently used as surrogate models due to their flexibility and ease of use, with a specified prior over $f(\mathbf{x})$.
 
-In general, one iteration of Bayesian optimization proceeds as follows [distill](https://doi.org/10.1007/s10994-012-5263-4):
+The Python library used in this workshop (Optuna) [\(Akiba et al., 2019\)](http://arxiv.org/abs/1907.10902) relies on the *Tree-Structured Parzen Estimator* algorithm as its surrogate model. However, this algorithm is not detailed here; for more information, the reader may refer to [\(Watanabe, 2023\)](https://arxiv.org/abs/2304.11127).
+
+In general, one iteration of Bayesian optimization proceeds as follows [\(Agnihotri & Batra, 2020\)](https://distill.pub/2020/bayesian-optimization):
 
 1. Select a surrogate model to approximate $f(\mathbf{x})$ and define a prior (e.g., a Gaussian process).
 2. Using all previous evaluations, i.e., pairs $(\mathbf{x}, f(\mathbf{x}))$, apply Bayes' rule to obtain the posterior distribution.
@@ -45,7 +47,7 @@ where $\mathcal{X}$ is the hyperparameter search space.
 
 ### Common Acquisition Functions
 
-Several acquisition functions exist to guide the choice of the next point to evaluate. Here, only the **Probability of Improvement (PI)** and **Expected Improvement (EI)** functions are discussed, as they are frequently used. For more information on other acquisition functions, see chapters 7 and 8 of [Garnett, 2023](#).  
+Several acquisition functions exist to guide the choice of the next point to evaluate. Here, only the **Probability of Improvement (PI)** and **Expected Improvement (EI)** functions are discussed, as they are frequently used. For more information on other acquisition functions, see chapters 7 and 8 of [\(Garnett, 2023\)](https://bayesoptbook.com).
 
 For each of the acquisition functions explained below, it is assumed that the objective is to find the configuration $x$ that maximizes the given objective. Some notation elements are summarized in the table below:
 
@@ -62,7 +64,7 @@ For each of the acquisition functions explained below, it is assumed that the ob
 
 The **Probability of Improvement (PI)** corresponds to the probability that the function value $f(x)$ at a candidate point $x$ exceeds a certain threshold $\tau$. This threshold is usually defined as the sum of the best observed value $f(x^+)$ and an exploration-exploitation constant $\epsilon$ (i.e., $\tau = f(x^+) + \epsilon$), where a higher $\epsilon$ encourages exploration.  
 
-The next point to evaluate, $x_{t+1}$, is the one that maximizes this probability. Mathematically ([Garnett, 2023](#), [Distill, 2020](#)):
+The next point to evaluate, $x_{t+1}$, is the one that maximizes this probability. Mathematically ([Garnett, 2023](https://bayesoptbook.com), [Agnihotri & Batra, 2020](https://distill.pub/2020/bayesian-optimization)):
 
 $$
 x_{t+1} = \arg\max_{\mathbf{x} \in \mathcal{X}} \alpha_{PI}(x)
@@ -83,26 +85,26 @@ $$
 x_{t+1} = \arg\max_{\mathbf{x} \in \mathcal{X}} \Phi\left(\frac{\mu - \tau}{\sigma}\right)
 $$
 
-To better understand how this function balances exploration and exploitation, a simplified version of $\alpha_{PI}(x)$ is considered, defined as $\alpha_{PI}'(x) = \frac{\mu - \tau}{\sigma}$. Examining the partial derivatives with respect to $\mu$ and $\sigma$, which are updated at each iteration, helps clarify their role. These derivatives are ([Garnett, 2023](#)):
+To better understand how this function balances exploration and exploitation, a simplified version of $\alpha_{PI}(x)$ is considered, defined as $\alpha_{PI}'(x) = \frac{\mu - \tau}{\sigma}$. Examining the partial derivatives with respect to $\mu$ and $\sigma$, which are updated at each iteration, helps clarify their role. These derivatives are [\(Garnett, 2023\)](https://bayesoptbook.com):
 
 $$
 \frac{\partial \alpha_{PI}'(x)}{\partial \mu} = \frac{1}{\sigma} \qquad ; \qquad
 \frac{\partial \alpha_{PI}'(x)}{\partial \sigma} = \frac{\tau - \mu}{\sigma^2}
 $$
 
-These derivatives can be interpreted as follows ([Garnett, 2023](#)):
+These derivatives can be interpreted as follows [\(Garnett, 2023\)](https://bayesoptbook.com):
 
 - $\frac{\partial \alpha_{PI}'(x)}{\partial \mu} > 0$: the probability of improvement increases with $\mu$, which favors **exploitation**. In other words, points $x$ with high predicted values ($\mu$) are preferred.
 - $\frac{\partial \alpha_{PI}'(x)}{\partial \sigma} > 0$ when $\tau > \mu$: the probability of improvement grows with uncertainty $\sigma$, encouraging **exploration** in regions with high predicted variance.
 - $\frac{\partial \alpha_{PI}'(x)}{\partial \sigma} < 0$ when $\tau < \mu$: in this case, the probability of improvement decreases with uncertainty, which discourages exploration.
 
-Thus, the Probability of Improvement tends to be relatively conservative: it favors "safe" solutions, i.e., certain but modest improvements, rather than riskier solutions that could yield larger but less certain gains ([Garnett, 2023](#)).
+Thus, the Probability of Improvement tends to be relatively conservative: it favors "safe" solutions, i.e., certain but modest improvements, rather than riskier solutions that could yield larger but less certain gains [\(Garnett, 2023\)](https://bayesoptbook.com).
 
 #### Expected Improvement $\alpha_{EI}(x)$
 
-As explained in the previous section, the Probability of Improvement only considers the likelihood of an improvement, without taking into account its magnitude. The **Expected Improvement (EI)** function addresses this limitation by selecting the next point to explore as the one that maximizes the expected improvement over the threshold $\tau$, defined as the sum of the best observed point $f(x^+)$ and an exploration-exploitation constant $\epsilon$ ([Distill, 2020](#)).
+As explained in the previous section, the Probability of Improvement only considers the likelihood of an improvement, without taking into account its magnitude. The **Expected Improvement (EI)** function addresses this limitation by selecting the next point to explore as the one that maximizes the expected improvement over the threshold $\tau$, defined as the sum of the best observed point $f(x^+)$ and an exploration-exploitation constant $\epsilon$ [\(Agnihotri & Batra, 2020\)](https://distill.pub/2020/bayesian-optimization).
 
-For a Gaussian process used as the surrogate model, the Expected Improvement function is expressed using the cumulative distribution function $\Phi$ and the probability density function $\phi$ of the standard normal distribution ([Garnett, 2023](#)):
+For a Gaussian process used as the surrogate model, the Expected Improvement function is expressed using the cumulative distribution function $\Phi$ and the probability density function $\phi$ of the standard normal distribution [\(Garnett, 2023\)](https://bayesoptbook.com):
 
 $$
 \alpha_{EI}(x) =
@@ -112,7 +114,7 @@ $$
 \end{cases}
 $$
 
-The value of $\alpha_{EI}(x)$ is high in two main situations (for $\sigma > 0$) ([Distill, 2020](#)):
+The value of $\alpha_{EI}(x)$ is high in two main situations (for $\sigma > 0$) [\(Agnihotri & Batra, 2020\)](https://distill.pub/2020/bayesian-optimization):
 
 1. When the expected value $(\mu - \tau)$ is high, via the first term $(\mu - \tau)\Phi\left(\frac{\mu-\tau}{\sigma}\right)$, which favors **exploitation** of already promising regions.
 2. When the uncertainty $\sigma$ around a point is high, via the second term $\sigma\,\phi\left(\frac{\mu-\tau}{\sigma}\right)$, which favors **exploration** of new regions.
