feat: add TLDR and useful references

--- a/notebooks/3.1-bayesian-opt-explain.md
+++ b/notebooks/3.1-bayesian-opt-explain.md
@@ -1,5 +1,23 @@
 # Quick intro to Bayesian Optimization concepts
 
+## ⚡ TL;DR
+
+Bayesian Optimization builds a probabilistic model of the objective function to intelligently choose the next parameters to evaluate.
+Unlike grid or random search, it balances exploration (trying uncertain regions) and exploitation (refining promising areas).
+This makes it far more efficient, achieving better results with fewer evaluations.
+
+For further information, we recommend the following resources:
+
+| Reference | What to use it for |
+|------------|--------------------|
+| [Bayesian Optimization Distill Tutorial](https://distill.pub/2020/bayesian-optimization) (🔥 highly recommended) | A clear and pedagogical introduction to Bayesian Optimization concepts. |
+| [\(Snoek et al., 2012\)](https://arxiv.org/abs/1206.2944) | Understanding the theoretical and practical foundations of Bayesian Optimization in ML. |
+| [\(Garnett, 2023\)](https://bayesoptbook.com) | A comprehensive theoretical reference on Bayesian Optimization. |
+| [\(Watanabe, 2023\)](https://arxiv.org/abs/2304.11127) | Detailed explanation of the Tree-Structured Parzen Estimator (TPE) algorithm. |
+| [\(Akiba et al., 2019\)](http://arxiv.org/abs/1907.10902) | Practical implementation details of Bayesian Optimization using Optuna in Python. |
+
+---
+
 A **hyperparameter** is a parameter that characterizes a machine learning model. For example, in CatBoost, it could be the number of iterations, while in logistic regression, it could be the regularization factor. Although modern libraries often provide satisfactory default values, exploring other configurations is essential to optimize model performance. Hyperparameter tuning is therefore a central and recurring challenge in machine learning. However, this process is often perceived as "opaque" because it lacks systematic methods and heavily depends on experience and empirical rules [\(Snoek et al., 2012\)](https://arxiv.org/abs/1206.2944).
 
 Two common methods are used to select hyperparameters:
