feat: add references section

--- a/notebooks/3.1-bayesian-opt-explain.md
+++ b/notebooks/3.1-bayesian-opt-explain.md
@@ -142,3 +142,22 @@ As with Probability of Improvement, the next point to explore is the one that ma
 $$
 x_{t+1} = \arg\max_{\mathbf{x} \in \mathcal{X}} \alpha_{EI}(x)
 $$
+
+## References
+
+1. Agnihotri, A. & Batra, N. (2020), ‘Exploring bayesian optimization’, Distill .
+https://distill.pub/2020/bayesian-optimization.
+
+2. Akiba, T., Sano, S., Yanase, T., Ohta, T. & Koyama, M. (2019), ‘Optuna: A next-generation
+hyperparameter optimization framework’, CoRR abs/1907.10902.
+URL: http://arxiv.org/abs/1907.10902
+
+3. Garnett, R. (2023), Bayesian Optimization, Cambridge University Press.
+
+4. Snoek, J., Larochelle, H. & Adams, R. P. (2012), ‘Practical bayesian optimization of machine learning
+algorithms’.
+URL: https://arxiv.org/abs/1206.2944
+
+5. Watanabe, S. (2023), ‘Tree-structured parzen estimator: Understanding its algorithm components and
+their roles for better empirical performance’.
+URL: https://arxiv.org/abs/2304.11127
