feat(assignment): Add bonus for the assignment

--- a/notebooks/assignment.ipynb
+++ b/notebooks/assignment.ipynb
@@ -21,7 +21,8 @@
     "\n",
     "**Table of contents**:\n",
     "1. [Validate the dataset using pandera](#1-validate-the-dataset-using-pandera)\n",
-    "2. [Validate the parameters using pydantic](#2-validate-the-parameters-using-pydantic)"
+    "2. [Validate the parameters using pydantic](#2-validate-the-parameters-using-pydantic)\n",
+    "3. [Bonus](#3-bonus)"
    ]
   },
   {
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c3d0586d",
    "metadata": {},
    "outputs": [],
@@ -63,6 +64,7 @@
     "\n",
     "import pandas as pd\n",
     "import pandera.pandas as pa\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
     "from pydantic import (\n",
     "    BaseModel,\n",
     "    Field,\n",
@@ -451,6 +453,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "388c7f3d",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "\n",
+    "<summary>Click to reveal tip</summary>\n",
+    "\n",
+    "Use the `mode()[0]` function to get the most represented category."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "7f93692a",
@@ -471,9 +485,19 @@
     "\n",
     "**Exercise**: Adapt the schema to check that each row is in one and only one set.\n",
     "1. Add the right checks for the columns `train_set`, `val_set` and `test_set`.\n",
-    "2. Add a schema check to make sure that each row is assigned to one and only one set.\n",
+    "2. Add a schema check to make sure that each row is assigned to one and only one set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4b6d250",
+   "metadata": {},
+   "source": [
+    "<details>\n",
     "\n",
-    "**Tips**: Use the `checks` parameter of the schema directly."
+    "<summary>Click to reveal tip</summary>\n",
+    "\n",
+    "Use the `checks` parameter of the schema directly."
    ]
   },
   {
@@ -1494,12 +1518,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c7e6bd4",
+   "cell_type": "markdown",
+   "id": "86e2c719",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now that we have found the best hyperparameters, we can train on the big train set and evaluate on the test set!\n",
+    "\n",
+    "**Exercise**: Train a final model on the big train set using the best hyperparameters and evaluate on the test set."
+   ]
   },
   {
    "cell_type": "code",
@@ -1507,7 +1533,73 @@
    "id": "c3439324",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "######################\n",
+    "### YOUR CODE HERE ###\n",
+    "######################\n",
+    "\n",
+    "big_train_predictions = #\n",
+    "test_predictions = #\n",
+    "\n",
+    "big_train_rmse = root_mean_squared_error(y_true=y_big_train, y_pred=big_train_predictions)\n",
+    "print(f\"Big Train RMSE: {big_train_rmse}\")\n",
+    "test_rmse = root_mean_squared_error(y_true=y_test, y_pred=test_predictions)\n",
+    "print(f\"Test RMSE: {test_rmse}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e17ea444",
+   "metadata": {},
+   "source": [
+    "# 3. Bonus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4db4fca",
+   "metadata": {},
+   "source": [
+    "You can see that there is overfitting! \n",
+    "\n",
+    "**Exercise**: Modify the function in the `train_utils.py` file to limit the overfitting of the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3879aea2",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "\n",
+    "<summary>Click to reveal tip 1</summary>\n",
+    "\n",
+    "Add an element in the metric to optimize containing the delta between train and validation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "698ac360",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "\n",
+    "<summary>Click to reveal tip 2</summary>\n",
+    "\n",
+    "Use an alpha parameter to control the impact of this delta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c7e6bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################\n",
+    "### YOUR CODE HERE ###\n",
+    "######################"
+   ]
   }
  ],
  "metadata": {
